[gd_scene load_steps=14 format=3 uid="uid://lgq212rq76q7"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_0ymer"]
[ext_resource type="Texture2D" uid="uid://cks3g7qwtpux4" path="res://sprites/Fundo1.png" id="1_wnngy"]
[ext_resource type="PackedScene" uid="uid://bspmptjsk25qu" path="res://scenes/player.tscn" id="2_4thjh"]
[ext_resource type="PackedScene" uid="uid://dvpoelg48uugh" path="res://scenes/ball.tscn" id="3_jhdko"]
[ext_resource type="AudioStream" uid="uid://bt1nrxxd7xjsx" path="res://sounds/score_se.mp3" id="5_dd7qi"]
[ext_resource type="AudioStream" uid="uid://boe71scjmw5cj" path="res://sounds/asteroid_explosion.mp3" id="6_uielw"]

[sub_resource type="LabelSettings" id="LabelSettings_uc05i"]
font_size = 250
font_color = Color(0.464067, 0.00266914, 0.964357, 1)

[sub_resource type="GDScript" id="GDScript_0uocd"]
script/source = "extends Label
"

[sub_resource type="FontVariation" id="FontVariation_82h2o"]

[sub_resource type="LabelSettings" id="LabelSettings_0trye"]
font = SubResource("FontVariation_82h2o")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vqf6"]
size = Vector2(597.5, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyvpe"]
size = Vector2(28.5, 958.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cx33c"]
size = Vector2(596, 19)

[node name="Game" type="Node2D"]
position = Vector2(5, -4)
script = ExtResource("1_0ymer")
metadata/_edit_vertical_guides_ = [538.0, 539.0]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_wnngy")
centered = false

[node name="Score" type="Label" parent="."]
visible = false
offset_left = -1.0
offset_top = 3.0
offset_right = 539.0
offset_bottom = 958.0
text = "0"
label_settings = SubResource("LabelSettings_uc05i")
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_0uocd")

[node name="score_sound_se" type="AudioStreamPlayer2D" parent="Score"]
position = Vector2(1, -3)
stream = ExtResource("5_dd7qi")
pitch_scale = 1.1

[node name="Tutorial" type="Label" parent="."]
offset_right = 525.0
offset_bottom = 959.0
text = "Press 'space' to start!"
label_settings = SubResource("LabelSettings_0trye")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopWall" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(269.25, -9.25)
shape = SubResource("RectangleShape2D_8vqf6")

[node name="LeftWall" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-13.5, 479.75)
shape = SubResource("RectangleShape2D_xyvpe")

[node name="RightWall" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(553.25, 479.5)
shape = SubResource("RectangleShape2D_xyvpe")

[node name="DeadZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
position = Vector2(270, 970.5)
shape = SubResource("RectangleShape2D_cx33c")
debug_color = Color(0.996865, 0.00080193, 0.000439723, 0.419608)

[node name="Player" parent="." instance=ExtResource("2_4thjh")]
position = Vector2(270, 895)
collision_mask = 7

[node name="Ball" parent="." instance=ExtResource("3_jhdko")]
z_index = 1
position = Vector2(270, 860)
collision_layer = 2
collision_mask = 29

[node name="Positions" type="Node2D" parent="."]

[node name="Pos_01" type="Marker2D" parent="Positions"]
position = Vector2(-140, 104)

[node name="Pos_02" type="Marker2D" parent="Positions"]
position = Vector2(-151, 508)

[node name="Pos_03" type="Marker2D" parent="Positions"]
position = Vector2(707, 177)

[node name="Pos_04" type="Marker2D" parent="Positions"]
position = Vector2(653, 406)

[node name="TimerSpawner" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="asteroid_explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_uielw")

[connection signal="body_entered" from="DeadZone" to="." method="_on_dead_zone_body_entered"]
[connection signal="timeout" from="TimerSpawner" to="." method="_on_timer_spawner_timeout"]
